--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel index.pug",
+    "build": "parcel build index.pug",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
